# MSI5102

./: .gitignore  README.md  pyproject.toml
artifacts/results/: data_split_summary.csv  knn_classification_report.csv  knn_hyperparameter_search.csv  knn_top_confusions.csv  logistic_regression_classification_report.csv  logistic_regression_hyperparameter_search.csv  logistic_regression_top_confusions.csv  model_metrics.csv  model_selection_summary.csv  neural_network_classification_report.csv  neural_network_hyperparameter_search.csv  neural_network_top_confusions.csv  pca_component_benchmark_validation.csv  pca_selection_summary.csv  raw_vs_best_pca_test_summary.csv  run_manifest.json  test_predictions.csv
docs/: slides.md
notebooks/: mnist_pipeline.ipynb
src/mnist_pipeline/: __init__.py  __main__.py  charts.py  config.py  data.py  diagnostics.py  embeddings.py  modeling.py  pipeline.py  plots.py  reporting.py  training.py
